# global_verifier_service

./: Cargo.toml  README.md  runTests.sh
src/: lib.rs  test_utils.rs
src/client/: holder.rs
src/common/: mod.rs  signer.rs  types.rs  verify.rs
src/services/: lambda.rs  verifier.rs
src/utils/: keygen.rs
