[package]
name = "global_verifier_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lambda_http = "0.8"
lambda_runtime = "0.8"
openssl-sys = { version = "0.9.106", features = ["vendored"] }

[[bin]]
name = "verifier"
path = "src/services/verifier.rs"

[[bin]]
name = "holder"
path = "src/client/holder.rs"

[[bin]]
name = "keygen"
path = "src/utils/keygen.rs"

[[bin]]
name = "global_verifier_lambda"
path = "src/services/lambda.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
