[package]
name = "global_verifier_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
lambda_http = "0.8"
lambda_runtime = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.0", features = ["full"] }
openssl-sys = { version = "0.9.106", features = ["vendored"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
rand = "0.8.0"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
mockito = "1.2"
wiremock = "0.5"
tempfile = "3.8"

[[bin]]
name = "verifier"
path = "src/services/verifier.rs"

[[bin]]
name = "holder"
path = "src/client/holder.rs"

[[bin]]
name = "keygen"
path = "src/utils/keygen.rs"

[[bin]]
name = "global_verifier_lambda"
path = "src/services/lambda.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
